# sensecap-indicator-d1

./: .gitignore  AGENTS.md  BUILD_AND_FLASH.md  README.md  build-firmware.sh  build-in-devcontainer.sh  flash-device.sh  opencode.json.example
.devcontainer/: Dockerfile  devcontainer.json
firmware/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults.template
firmware-rust/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  SETUP.md  rust-toolchain.toml  sdkconfig.defaults
firmware-rust/.cargo/: config.toml
firmware-rust/src/: backend.rs  config.rs  display.rs  lvgl_ui.rs  main.rs  mqtt.rs  touch.rs  ui.rs  wifi.rs
firmware/main/: CMakeLists.txt  Kconfig.projbuild  display_driver.c  display_driver.h  main.c  touch_driver.c  touch_driver.h  wifi_manager.c  wifi_manager.h
firmware/main/backend/: backend.c  backend.h
firmware/ui/: filelist.txt  lv_conf.h  ui.c
firmware/ui/screens/: ui_Screen_1.c  ui_Screen_1.h
sensecap-firmware/: Cargo.toml  Cargo.toml.backup  lv_conf.h  sdkconfig.defaults
sensecap-firmware/.cargo/: config.toml
sensecap-firmware/sensecap-backend/: Cargo.toml
sensecap-firmware/sensecap-backend/src/: ffi.rs  lib.rs  lights.rs  mqtt.rs  water.rs
sensecap-firmware/sensecap-main/: Cargo.toml  lv_conf.h
sensecap-firmware/sensecap-main/src/: main.rs
sensecap-firmware/sensecap-ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_themes.c  ui_themes.h
sensecap-firmware/sensecap-ui/images/: ui_img_129797224.c  ui_img_166333148.c  ui_img_404674758.c
sensecap-firmware/sensecap-ui/screens/: ui_Screen_1.c
sensecap-firmware/ui/: project.info  ui_themes.h
simulator/: CMakeLists.txt  README.md  build.sh  check-wsl.ps1  lv_conf.h
simulator-backend/: Cargo.toml
simulator-backend/src/: ffi.rs  lib.rs  lights.rs  mock_mqtt.rs  water.rs
simulator/backend/: backend.c  backend.h
simulator/src/: main.c
simulator/ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.h
simulator/ui/components/: ui_comp_hook.c
simulator/ui/images/: ui_img_353436330.c  ui_img_404674758.c
simulator/ui/screens/: ui_Screen_1.c  ui_Screen_1.h
