[package]
name = "sensecap-indicator-d1"
version = "0.1.0"
edition = "2021"
authors = ["RakiDelmoro"]
description = "Rust firmware for SenseCAP Indicator D1 ESP32-S3 IoT device"
license = "MIT"
repository = "https://github.com/RakiDelmoro/sensecap-indicator-d1"

[profile.release]
opt-level = 3
lto = "thin"
debug = true

[profile.dev]
debug = true
opt-level = 0

[dependencies]
log = "0.4"
anyhow = "1"
esp-idf-sys = { version = "0.35", features = ["binstart"] }
esp-idf-hal = "0.44"
esp-idf-svc = { version = "0.49", default-features = false }
esp-idf-alloc = { version = "0.1", optional = true }
embedded-svc = "0.28"
embedded-hal = "1"
embedded-hal-async = "1"
heapless = "0.8"
serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = "0.5"

[features]
default = ["alloc", "wifi", "mqtt"]
alloc = ["esp-idf-alloc"]
wifi = ["esp-idf-svc/wifi"]
mqtt = ["esp-idf-svc/mqtt"]

[[bin]]
name = "sensecap-indicator-d1"
path = "src/main.rs"
