[workspace]
members = ["sensecap-main", "sensecap-backend"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Raki Delmoro <rakidelmoro@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[workspace.dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["experimental"] }
anyhow = "1.0"
esp-idf-hal = "0.45.2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"
